# Bachelorarbeit_FS22

./: .gitignore  README.md
02_Code/ba_code/: cli_executor.py  pyproject.toml
02_Code/ba_code/ba_code/: path.py  test.py
02_Code/ba_code/ba_code/data_preprocessing/: restaurant_review_data_analyzer.py
02_Code/ba_code/ba_code/data_processing_and_analysis/: 01_correlation_overall_rating_before_vs_with_corona_tripadvisor.ipynb  01_correlation_overall_rating_google_and_overall_rating_tripadvisor.ipynb  02_correlation_average_rating_before_vs_with_corona_tripadvisor.ipynb  02_correlation_average_rating_google_and_average_rating_tripadvisor.ipynb  03_01_correlation_overall_rating_observed.ipynb  03_02_correlation_overall_rating_decompose.ipynb  03_correlation_overall_rating_before_vs_with_corona_google.ipynb  04_correlation_average_rating_before_vs_with_corona_google.ipynb  05_correlation_overall_rating_google_and_overall_rating_tripadvisor.ipynb  06_correlation_average_rating_google_and_average_rating_tripadvisor.html  06_correlation_average_rating_google_and_average_rating_tripadvisor.ipynb  07_01_correlation_overall_rating_observed.html  07_01_correlation_overall_rating_observed.ipynb  07_02_correlation_overall_rating_decompose.html  07_02_correlation_overall_rating_decompose.ipynb  07_correlation_overall_rating_before_vs_with_corona_google_decompose.ipynb  data_analyzer.py  (+10 more)
02_Code/ba_code/tests/: test_ba_code.py  test_prognolite_restaurant_data_extractor.py  test_tripadvisor_restaurant_data_analyzer.py  test_tripadvisor_restaurant_data_extractor.py
(+1966 files in other folders)
