[tool.poetry]
name = "ba_code"
version = "0.1.0"
description = ""
authors = ["Manu Kunnumpurathu <kunnuman@students.zhaw.ch>"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.22.2"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
