[tool.poetry]
name = "ba_code"
version = "0.1.0"
description = ""
authors = ["Manu Kunnumpurathu <kunnuman@students.zhaw.ch>"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.22.2"
scipy = "^1.8.0"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"
lxml = "^4.8.0"
selenium = "^4.1.2"
typer = "^0.4.0"
dateparser = "^1.1.0"
webdriver-manager = "^3.5.3"
pandas = "^1.4.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
